Fix gap in bottom of video controls

--- a/test-app/src/App.css
+++ b/test-app/src/App.css
@@ -14,5 +14,5 @@
 }
 
 .videoContainer {
-  max-width: 320px;
+  max-width: 640px;
 }
